--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           Model is trained on
           <br>
           <div class = "btn btn-danger heading_div2">
-            Rubix Cube | Spoon | Water Bottle | Pencil
+            Rubix Cube | Eraser | Water Bottle | Pencil
           </div>
         </div>
       </center>
@@ -42,7 +42,7 @@
 
   </center>
 
-  <div class = "copy_right_footer"
+  <div class = "copy_right_footer"></div>
 
 <script src="main.js"></script>
 </body>
